--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -14,7 +14,7 @@
       <tbody>
         <tr>
     <th><span>Метро</span></th>
-    <td><%= image_tag @organization.metro_station.metro_branch.icon.url %><%= @organization.metro_station.title %></td>
+    <td><%= image_tag @organization.metro_station.metro_branch.icon.url, class: 'metro_icon' %><%= @organization.metro_station.title %></td>
         </tr>
         <tr>
           <th><span>Адрес</span></th>
