--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -10,9 +10,9 @@
 .profile_change_wrapper .profile_change_avatar .button a { -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; padding:6px 20px 6px 25px; color:#fff; font-weight:bold; text-decoration:none; display:inline-block; background:#eb0a0a url(/assets/close_white.png) no-repeat 7px 9px;}
 
 .profile_change_wrapper .profile_change_avatar .field { float:left; margin-right:20px; padding-top:40px}
-.profile_change_wrapper .profile_change_avatar .field .download_button_wrapper { cursor:pointer; margin-left:10px; width:186px; height:36px; overflow:hidden; display:block; position:relative}
+.profile_change_wrapper .profile_change_avatar .field .download_button_wrapper { margin-left:10px; width:186px; height:36px; overflow:hidden; display:block; position:relative}
 .profile_change_wrapper .profile_change_avatar .field .mask_button { text-align:center; display:block; background:url(/assets/download_avatar.png) no-repeat; width:186px; height:36px; line-height:36px; cursor:pointer}
-.profile_change_wrapper .profile_change_avatar .field .download_button_wrapper input {  position:absolute; z-index:10; opacity: 0; top:0; margin-left:-10px; margin-top:-10px; background:none; border:none; font-size:2000px; cursor:pointer}
+.profile_change_wrapper .profile_change_avatar .field .download_button_wrapper input { position:absolute; z-index:10; opacity: 0; top:0; margin-left:-10px; margin-top:-10px; background:none; border:none; font-size:2000px; cursor:pointer}
 
 
 .profile_change_wrapper .profile_change_name { padding:20px 0px; border-bottom:1px solid #cccccc}
