--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -32,7 +32,9 @@
 		<li><%= link_to article.title, article %>
 	      <% end %>
 	    </ul>
-	    <%= link_to 'Архив', article_archive_path(@article) %>
+	    <%= link_to article_archive_path(@article) do %>
+      <span class="title">Архив</span>
+      <% end %>
 	  <% end %>
 	</div>
       <% end %>
