--- a/app/views/news/_page.html.erb
+++ b/app/views/news/_page.html.erb
@@ -1,7 +1,7 @@
 <div class="news">
   <% news.each do |n| %>
   <div class="item">
-    <%= image_tag n.photo.url %>
+    <%= link_to image_tag(n.photo.url), n %>
     <div class="content">
       <%= link_to n.title, n, :class => 'title' %>
       <div class="date">
