--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -8,7 +8,7 @@
       <div class="title">Новости</div>
       <% @news.each do |n| %>
       <div class="item">
-        <%= image_tag n.photo.url %>
+        <%= link_to image_tag(n.photo.url), n %>
         <div class="content">
           <%= link_to n.title, n, :class => 'title' %>
           <div class="date">
