--- a/public/style.css
+++ b/public/style.css
@@ -39,13 +39,19 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
 .header_wrapper { margin:auto; position:relative; min-width:960px; padding:25px 0px 15px 0px; border-bottom:2px solid #ccc;}
 
-#header .header_flash_wrapper  { position:relative; background:url(/assets/header_bg.jpg) no-repeat center top; height:204px;}
-#header .header_flash_wrapper a { display:block; height:204px; width:100%; position:absolute; z-index:10}
+#header .header_flash_wrapper  { position:relative; background:#7e1222 url(/assets/header_bg.jpg) no-repeat center top; height:200px;}
+#header .header_flash_wrapper a { display:block; height:200px; width:100%; position:absolute; z-index:10}
 
-#header .header_flash_wrapper .cap { background:url(/assets/header_cap.jpg) no-repeat center top; height:204px;}
+#header .header_flash_wrapper .cap { background:url(/assets/header_cap.jpg) no-repeat center top; height:200px;}
+
+
 
 #main_page .color_line_left { background:url(/assets/color_line.jpg) repeat-y left 100px}
 #main_page .color_line_right { background:url(/assets/color_line.jpg) repeat-y right}
+
+
+#header .color_line_left { background:url(/assets/color_line.jpg) repeat-y left 100px}
+#header .color_line_right { background:url(/assets/color_line.jpg) repeat-y right}
 
 #search_block { position:absolute; left:50px; top:36px; z-index:120; width:129px }
 #search_block .search_button { padding:18px 15px 0 15px; dislay:block; background:#fff;}
@@ -85,6 +91,10 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 #login_block .is_login .login_user_flag .mask {  position:absolute; right:0px; top:0px; background:url(/assets/user_name_login_mask.png); width:36px; height:21px; display:block;}
 #login_block .is_login .logout { color:#bb224c; font-size:11px; line-height:21px;}
 
+#login_block .profile_menu { position:relative; padding:4px; width:112px; margin-left:-2px; background:#fff; -moz-box-shadow:0px 2px 6px rgba(0,0,0,0.5);
+	      -webkit-box-shadow:0px 2px 6px rgba(0,0,0,0.5);
+	      box-shadow:0px 2px 6px rgba(0,0,0,0.5); text-align:center; -moz-border-radius:0 0 20px 20px; border-radius:0 0 20px 20px; -webkit-border-radius:0 0 20px 20px; -khtml-border-radius:0 0 20px 20px; }
+#login_block .profile_menu a { color:#bb224c; font-size:11px;}
 
 .show_search .search_wrapper {}
 
@@ -109,10 +119,10 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 #header #menu li:hover, #header #menu li.selected  { border:3px solid #21a2dc; }
 #header #menu li:hover a, #header #menu li.selected a { padding:0px 2px;}
 
-/*
+
 #header #menu li.current {  border:3px solid #BB224C;}
 #header #menu li.current a {  padding:0px 2px;}
-*/
+#header #menu li.current:hover {  border:3px solid #21a2dc;}
 
 
 #nested_slider { height:395px; position:relative}
@@ -180,22 +190,25 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .error_404 h1 { padding:20px 0px 0px 0px}
 
 /* FOOTER */
-#main_page #footer { background:#ECECE7}
-#footer { font-size:13px; color:#fff; }
+.footer_wrapper { width:960px; margin:auto; }
+#footer { font-size:13px; color:#fff; background:url(/assets/footer_bg.png) }
 #footer a { color:#fff;}
-#footer .footer_header { height:60px; background:url(/assets/footer_top.png) no-repeat center top; min-width:960px}
-#footer .footer_content { background:url(/assets/footer_bg.png) }
-#footer .footer_shadow { background:url(/assets/footer_shadow.png) repeat-x bottom; padding: 0 0 5px 0;}
+#footer .footer_header { height:46px; background:#fff url(/assets/footer_top.png) no-repeat center -10px; min-width:960px}
+#main_page #footer .footer_header { background:#ECECE7 url(/assets/footer_top.png) no-repeat center top;}
+#footer .footer_content {  }
+#footer .footer_shadow { background:url(/assets/footer_shadow.png) repeat-x bottom; }
 
-#footer .column { width:250px; float:left; text-align:center}
+#footer .column { width:252px; float:left; text-align:center}
 #footer .column.right { float:right}
-#footer .column.center { width:300px; margin-left:85px }
+#footer .column.center { width:300px; margin-left:83px }
 
 #footer .menu { padding-bottom:20px}
 #footer .menu li, #footer .menu a { font-weight:bold; color:#fff; font-size:15px;}
 
-#footer .copy, #footer .create { opacity:0.6; line-height:1.3}
-#footer .copy { padding-bottom:12px;}
+#footer .copy, #footer .create, #footer .license { opacity:0.6; line-height:1.3}
+#footer .create { padding-bottom:20px;}
+
+#footer .license { font-size:11px; padding-top:98px; width:255px; margin-left:-5px}
 
 #footer .gen_sponsor span { opacity:0.6; font-size:17px; font-weight:600; line-height:1.2 }
 #footer .gen_sponsor img { margin-bottom:10px}
