--- a/app/views/dashboard/activities/_teachers.html.erb
+++ b/app/views/dashboard/activities/_teachers.html.erb
@@ -3,21 +3,24 @@
     <span class="circle">3</span>
     <span class="title">Преподаватели</span>
 
-    <% unless f.object.teachers.present? %>
-      <div class="button_edit first">
-        <button class="delete"></button>
-        <button class="add-first">Добавить еще одного преподавателя</button>
-        <div class="clear"></div>
-      </div>
-      <div class="teacher">
-      </div>
-    <% end %>
+    <div id="teachers">
+    
+      <% f.object.teachers.order('created_at ASC').each do |teacher| %>
+        <%= render 'teacher', f: f, teacher: teacher, new_data: false %>
+      <% end %>
+      
+      <% unless f.object.teachers.present? %>
+        <div class="button_edit first" id="teachers-default-buttons">
+          <button></button>
+          <button class="add first">Добавить еще одного преподавателя</button>
+          <div class="clear"></div>
+        </div>
+      <% end %>
 
-    <% f.object.teachers.order('created_at ASC').each do |teacher| %>
-      <%= render 'teacher', f: f, teacher: teacher, new_data: false %>
-    <% end %>
-    <div class="hidden_teacher hidden">
-      <%= render 'teacher', f: f, teacher: f.object.teachers.new, new_data: true %>
+      <div id="hidden_teacher" class="hidden">
+        <%= render 'teacher', f: f, teacher: f.object.teachers.new, new_data: true %>
+      </div>
+      
     </div>
   </div>
 </div>
