--- a/app/views/dashboard/favorites/index.html.erb
+++ b/app/views/dashboard/favorites/index.html.erb
@@ -1,4 +1,4 @@
-<div class="pages">
+<div class="pages no-padding">
   <div class="common">
 
     <%= render 'dashboard/shared/profile_menu', current: 'favourites' %>
