--- a/app/views/activities/entertainment.html.erb
+++ b/app/views/activities/entertainment.html.erb
@@ -17,7 +17,7 @@
 	      <%= link_to "названию", '#', :class => 'order_by', 'data-order' => 'title' %>
 	    </span>,
 	    <span class="sort_date">
-	      <%= link_to "дате добавления", "#", :class => 'order_by', 'data-order' => 'created_at' %>
+	      <%= link_to "дате добавления", "#", :class => 'order_by_bold', 'data-order' => 'created_at' %>
 	    </span> или
 	    <span class="sort_rating">
 	      <%= link_to "рейтингу", "#", :class => 'order_by', 'data-order' => 'users_rating' %>
