--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -79,7 +79,7 @@
         </div>
         <div class="participant_data">
           <div class="participant_title"><%= p.title %></div>
-          <%= p.description %>
+          <%= raw p.description %>
         </div>
         <div id="lightbox_hook_<%= p.id %>" class="hidden">
           <% p.photos.each do |photo| %>
