--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -1,10 +1,10 @@
 <div class="name"><%= link_to object.title, object %></div>
 
-<div class="short_desc"><%= object.description %></div>
+<div class="short_desc"><%== object.description %></div>
 
 <div class="info">
   <em>В разделе</em>
   <%= link_to 'Москва для детей', '#'%>
   <em>от</em>
-  <%= Russian::strftime(object.created_at, "%e %B %Y") %>
+  <%= r_time object.created_at %>
 </div>
