--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -58,7 +58,7 @@
 
       <% if News.count > 0 %>
         <div class="title"><span>Новости</span></div>
-        <%= render 'news',  news: News.order('publication_date DESC').first(3) %>
+        <%= render 'news', news: News.published.order('publication_date DESC').first(3) %>
       <% end %>
     </div>
   </div>
