--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -47,49 +47,47 @@
 	<div class="clear"></div>
 
 	<div class="info_block">
-	  <table>
-	    <% unless @activity.metro_station.uniq.blank? %>
-        <% @activity.metro_station.uniq.each do |ms| %>
-          <tr>
-          <th><%= image_tag ms.metro_branch.icon.url %></th>
-          <td><%= ms.title %><br />
-          </tr>
-        <% end %>
+    <% unless @activity.metro_station.uniq.blank? %>
+      <% @activity.metro_station.uniq.each do |ms| %>
+      <div class="info_title">
+        <div class="info_left"><%= image_tag ms.metro_branch.icon.url %></div>
+        <div class="info_right"><%= ms.title %></div>
+      </div>
       <% end %>
+    <% end %>
       <% unless @activity.region.title.blank? %>
-	    <tr>
-	      <th><span>Округ</span></th>
-	      <td><%= @activity.region.title %><br />
-	    </tr>
+	    <div class="info_title">
+	      <div class="info_left">Округ</div>
+	      <div class="info_right"><%= @activity.region.title %></div>
+	    </div>
       <% end %>
       <% first = true %>
       <% unless @activity.address.blank? %>
         <% @activity.address.split(/; |;/).each do |addr| %>
-          <tr>
-            <th><span>Адрес</span></th>
-            <td><div class="activ_address"><%= y_link((first ? @activity.coords : nil), addr) %></div></td>
-             <% if first then first = false end %>
-          </tr>
+        <div class="info_title">
+          <div class="info_left">Адрес</div>
+          <div class="info_right"><div class="activ_address"><%= y_link((first ? @activity.coords : nil), addr) %></div></div>
+            <% if first then first = false end %>
+        </div>
         <% end %>
       <% else %>
-        <tr>
-          <th><span>Адрес</span></th>
-          <td><div class="activ_address"><%= @activity.address_dummy %></div></td>
-        </tr>
+      <div class="info_title">
+        <div class="info_left">Адрес</div>
+        <div class="info_right"><div class="activ_address"><%= @activity.address_dummy %></div></div>
+      </div>
       <% end %>
       <% unless @activity.site.blank? %>
-	    <tr>
-	      <th><span>Сайт</span></th>
-	      <td ><div class="activ_site"><a href=<%= @activity.site %> target="_blank" ><%= @activity.site %></a></div></td>
-	    </tr>
+      <div class="info_title">
+	      <div class="info_left">Сайт</div>
+	      <div class="info_right"><div class="activ_site"><a href=<%= @activity.site %> target="_blank" ><%= @activity.site %></a></div></div>
+	    </div>
       <% end %>
       <% unless @activity.phone.blank? %>
-	    <tr>
-	      <th><span>Телефон</span></th>
-	      <td><%= @activity.phone %></td>
-	    </tr>
+	    <div class="info_title">
+	      <div class="info_left">Телефон</div>
+	      <div class="info_right"><%= @activity.phone %></div>
+	    </div>
       <% end %>
-	  </table>
 	</div>
       </div>
 
