--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -53,7 +53,7 @@
             <% end %>
           </div>
           <div class="title"><%= b.title %></div>
-          <%= raw b.description %>          
+          <%== b.description %>          
           <div id="lightbox_hook_<%= b.id %>" class="hidden">
             <% b.photos.each do |photo| %>
               <%= link_to '#', photo.attach.url(:original), class: "photo#{photo.id}", rel: "participant_"+(b.id.to_s)+"[gallery]" %>
@@ -80,7 +80,7 @@
         </div>
         <div class="participant_data">
           <div class="participant_title"><%= p.title %></div>
-          <%= raw p.description %>
+          <%== p.description %>
         </div>
         <div id="lightbox_hook_<%= p.id %>" class="hidden">
           <% p.photos.each do |photo| %>
