fix BRI-247. Adding teacher in user dashboard

--- a/app/views/dashboard/activities/_teacher.html.erb
+++ b/app/views/dashboard/activities/_teacher.html.erb
@@ -6,7 +6,7 @@
 	<%= t.text_field :name %>
 	<br>
 	2. Биография
-	<%= t.text_area :description %>
+	<%= t.text_area :description, class: (teacher.id ? 'teacher_bio' : '') %>
       </div>
       <div class="item width50">
 	3. Портрет
