--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -28,7 +28,7 @@
 	  <% if @article.author.articles.published.count > 1 %>
 	    <div class="title">Другие статьи автора</div>
 	    <ul>
-	      <% @article.author.articles.last5(@article).each do |article| %>
+	      <% @article.author.articles.except(@article).last(5).each do |article| %>
 		<li><%= link_to article.title, article %>
 	      <% end %>
 	    </ul>
