--- a/app/views/pages/inf.html.erb
+++ b/app/views/pages/inf.html.erb
@@ -1,12 +1,13 @@
 <div class="pages">
   <%== Page.as('inf').text %>
-  <!-- NOT EDIT -->
-  <div class="sidebar">
-    <%= render 'shared/sidebar' %>
+  
+    <!-- DO NOT EDIT -->
+    <div class="sidebar">
+      <%= render 'shared/sidebar' %>
+    </div>
+    <div class="clear">
+    </div>
   </div>
-  <div class="clear">
-  </div>
-</div>
 
 <% content_for :title do %>
   Фестиваль Яркие Люди | Инфопартнёры
