--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -11,7 +11,7 @@
         <li class="participants_ico <%= 'active' unless @is_headliners_page %>"><a href="/participants?category=music_stage">Программа</a></li>
         <li class="headliners_ico <%= 'active' if @is_headliners_page %>"><a href="/participants">Хэдлайнеры</a></li>
         <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
-	<li class="org_ico"><a href="/pages/inf">Инфопартнёры</a></li>
+        <li class="org_ico"><a href="/pages/inf">Инфопартнёры</a></li>
       </ul>
       <div class="clear"></div>
     </div>
@@ -73,6 +73,7 @@
       <div class="participant">
         <div class="participant_photo">
           <% if p.photos.count > 0 || p.videos.count > 0 %>
+            <div class="init_lightbox"></div>
             <%= image_tag p.logo.url(:participants_page), :class => 'clickable' %>
           <% else %>
             <%= image_tag p.logo.url(:participants_page) %>
