--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -386,8 +386,10 @@ span.sim_check.active { background-position:0px 0px; }
 
 .entertainment_list .preview_catalog { width:25%;}
 
-.inf_page { background: url(/assets/expert_list_bg_small.jpg) no-repeat center 34px; }
+.inf_page { min-height: 415px; background: url(/assets/expert_list_bg_small.jpg) no-repeat center 74px; }
 .inf_page .preview_catalog { width: 25%; margin-bottom: 10px; }
+.inf_page .preview_catalog .thumb { display: table-cell; vertical-align: middle; height: 114px; text-align: center; }
+.inf_page .preview_catalog .thumb img { width: auto; max-width: 100%; height: auto; max-height: 100%; }
 .inf_page .preview_catalog .name { height: auto; text-align: center; }
 
 /* CATALOGS  PAGER */
