--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,11 @@
 <% content_for :title do %>
   Фестиваль Яркие Люди | Яркий Журнал | <%= @article.title %>
 <% end %>
+<!-- for vk -->
+<meta name="title" content="<%= @article.title %>">
+<meta name="description" content="<%= truncate(@article.content, length: 140, omission: '...') %>" />
+<link rel="image_src" href="<%= @article.picture.url(:original) %>" />
+
 <div class="pages">
   <div class="common">
     <h1><%= @article.title %> <%= favourite_block @article %></h1>
