changed 'places' to 'children activities'

--- a/app/views/activities/educational.html.erb
+++ b/app/views/activities/educational.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Фестиваль Яркие Люди | Места
+  Фестиваль Яркие Люди | Детские кружки
 <% end %>
 
 <div class="workshop_list">
