--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Фестиваль Яркие Люди | Места | <%= @activity.title %>
+  Фестиваль Яркие Люди | Детские кружки | <%= @activity.title %>
 <% end %>
 
 <%= render 'activities/approve_dialog', activity: @activity %>
