--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,12 @@
 <% content_for :title do %>
   Фестиваль Яркие Люди | Яркий Журнал | <%= @article.title %>
 <% end %>
+<% content_for :vk_data do %>
 <!-- for vk -->
-<meta name="title" content="<%= @article.title %>">
-<meta name="description" content="<%= truncate(@article.content, length: 140, omission: '...') %>" />
-<link rel="image_src" href="<%= @article.picture.url(:medium) %>" />
+  <meta name="title" content="<%= @article.title %>">
+  <meta name="description" content="<%= truncate(@article.content, length: 140, omission: '...') %>" />
+  <link rel="image_src" href="<%= @article.picture.url(:medium) %>" />
+<% end %>
 
 <div class="pages">
   <div class="common">
