--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= stylesheet_link_tag 'application', :media => "all" %>
     <%= javascript_include_tag 'application' %>
     <%= yield :after_head %>
+    <%= yield :vk_data %>
     <%= csrf_meta_tags %>
   </head>
   <%== yield(:body).present? ? yield(:body) : '<body>' %>
