--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -4,7 +4,7 @@
 <% content_for :after_head do %>
 <!-- for vk -->
   <meta name="title" content="<%= @news.title %>">
-  <meta name="description" content="<%= truncate(@news.content, length: 140, omission: '...') %>" />
+  <meta name="description" content="<%= truncate(@news.short_description, length: 140, omission: '...') %>" />
   <link rel="image_src" href="<%= @news.photo.url(:slider) %>" />
 <% end %>
 
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="description">
-        <div class="text"><%= raw @news.full_text %></div>
+        <div class="text"><%= raw @news.content %></div>
         <div class="article_tags">
           <% @tags.each do |t| %>
             <%= link_to t.name, tag_articles_path(tag: t.name) %>
