active admin bug: buttons don't work, actions do. yyyyy? :)

--- a/app/views/admin/special_projects/_form.html.erb
+++ b/app/views/admin/special_projects/_form.html.erb
@@ -8,5 +8,5 @@
     <%= f.input :special_project_tag_list %>
     <%= f.input :picture, as: :file, hint: f.template.image_tag(f.object.picture.url(:medium)) %>
   <% end %>
-  <%= f.buttons %>
+  <%= f.actions %>
 <% end %>
