--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -14,7 +14,5 @@
 
   <%= render 'admin/shared/media_content', f: f %>
 
-  <%= f.buttons do %>
-    <%= f.commit_button %>
-  <% end %>
+  <%= f.actions %>
 <% end %>
