--- a/app/views/admin/sponsors/_form.html.erb
+++ b/app/views/admin/sponsors/_form.html.erb
@@ -9,5 +9,5 @@
     <%= f.input :photo, as: :file, hint: f.template.image_tag(f.object.photo) %>
   <% end %>
 
-  <%= f.buttons %>
+  <%= f.actions %>
 <% end %>
