--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <%== yield(:body).present? ? yield(:body) : '<body>' %>
     <div id="wrapper">
       <div id="header">
+        <div class="notify notice">Я предупреждение, я не хочу предупреждать. Я хочу "АЛЯРМ!"</div>
 	<%= flash_messages %>
         <%= render partial: 'shared/header' %>
       </div>
