--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -30,7 +30,7 @@
   <% end %>
 
   <%= f.inputs "Адрес" do %>
-    <%= f.input :metro_station, input_html: { class: 'chosen_autocomplete' } %>
+    <%= f.input :metro_stations, input_html: { class: 'chosen_autocomplete' } %>
     <%= f.input :address %>
     <%= f.input :address_dummy %>
     <%= f.input :coords, as: :hidden, input_html: { class: 'hidden_coords'} %>
