--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -12,9 +12,9 @@
         </span>
         <% end %>
         <% counter = 1 %>
-        <% unless activity.metro_station.uniq.blank? %>
-          <% activity.metro_station.uniq.each do |ms| %>
-            <span class="geo"><%= image_tag ms.metro_branch.icon.url %><%= ms.try(:title)+(counter == activity.metro_station.uniq.count ? "" : ",") %></span>
+        <% unless activity.metro_stations.uniq.blank? %>
+          <% activity.metro_stations.uniq.each do |ms| %>
+            <span class="geo"><%= image_tag ms.metro_branch.icon.url %><%= ms.try(:title)+(counter == activity.metro_stations.uniq.count ? "" : ",") %></span>
             <% counter+=1 %>
           <% end %>
         <% end %>
