changed f.actions to f.buttons

--- a/app/views/admin/interviews/_form.html.erb
+++ b/app/views/admin/interviews/_form.html.erb
@@ -56,6 +56,6 @@
     <%= f.input :picture, as: :file, hint: f.template.image_tag(f.object.picture.url(:medium)) %>
     <%= f.input :interview_tag_list %>
   <% end %>
-  <%= f.actions %>
+  <%= f.buttons %>
 <% end %>
 
