--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -2,5 +2,5 @@
   <%= f.inputs 'Основное' do %>
     <%= f.input :text, input_html: { size: 10 } %>
   <% end %>
-  <%= f.actions %>
+  <%= f.buttons %>
 <% end %>
