--- a/app/views/admin/creative_groups/_form.html.erb
+++ b/app/views/admin/creative_groups/_form.html.erb
@@ -10,5 +10,5 @@
     <%= f.input :avatar, as: :file, hint: f.template.image_tag(f.object.avatar.url) %>
   <% end %>
 
-  <%= f.actions %>
+  <%= f.buttons %>
 <% end %>
