--- a/app/views/activities/_m_educational.html.erb
+++ b/app/views/activities/_m_educational.html.erb
@@ -1,3 +1,4 @@
+<%= include_js :after_head, load_ymaps(true) %>
 <% activities.each do |activity| %>
   <% if activity.approved? %>
     <div class="preview_catalog approved" data-coords="<%= activity.coords %>">
