--- a/app/views/activities/_m_entertainment.html.erb
+++ b/app/views/activities/_m_entertainment.html.erb
@@ -1,3 +1,4 @@
+<%= include_js :after_head, load_ymaps(true) %>
 <% activities.each do |activity| %>
   <div class="preview_catalog">
     <div class="thumb">
