--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,11 +1,13 @@
 <% content_for :title do %>
   Фестиваль Яркие Люди | Новости фестиваля | <%= @news.title %>
 <% end %>
-<% content_for :after_head do %>
-<!-- for vk -->
+<% content_for :before_head do %>
+  <!-- for vk -->
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="title" content="<%= @news.title %>">
-  <meta name="description" content="<%= truncate(@news.short_description, length: 140, omission: '...') %>" />
-  <link rel="image_src" href="<%= @news.photo.url(:slider) %>" />
+  <meta name="description" content="<%= truncate(Sanitize.clean(@news.short_description), length: 200, omission: '...') %>" />
+  <link rel="image_src" href="<%= Rails.application.config.host_name+@news.photo.url(:slider) %>" />
+  <!-- for vk -->
 <% end %>
 
 
