--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="title" content="<%= @article.title %>">
   <meta name="description" content="<%= truncate(Sanitize.clean(@article.short_description), length: 200, omission: '...') %>" />
-  <link rel="image_src" href="<%= Rails.application.config.host_name+@article.picture.url(:medium, :false) %>" />
+  <link rel="image_src" href="<%= Rails.application.config.host_name+@article.picture.url(:medium, false) %>" />
   <!-- for vk -->
 <% end %>
 
