--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -13,7 +13,9 @@
       <div class="left_part">
         <div class="info_block">
           <div class="info_title">
-              <div class="info_left"><%= image_tag @organization.metro_station.metro_branch.icon.url, class: 'metro_icon' %></div>
+              <% if @organization.metro_station.metro_branch.present? %>
+                <div class="info_left"><%= image_tag @organization.metro_station.metro_branch.icon.url, class: 'metro_icon' %></div>
+              <% end %>
               <div class="info_right"><span><%= @organization.metro_station.title %></span></div>  
           </div>
           <div class="info_title">
