fix entertainment pictures size

--- a/app/views/activities/_m_entertainment.html.erb
+++ b/app/views/activities/_m_entertainment.html.erb
@@ -2,7 +2,7 @@
 <% activities.each do |activity| %>
   <div class="preview_catalog">
     <div class="thumb">
-      <%= link_to image_tag(activity.logo.url(:approved)), activity_path(activity) %>
+      <%= link_to image_tag(activity.logo.url(:index)), activity_path(activity) %>
     </div>
     <div class="info">
       <% if activity.participant? %>
